--- a/Comp354Project/src/main/resources/application.properties
+++ b/Comp354Project/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://remotemysql.com:3306/
 spring.datasource.username=I2HFBXbU7k
 spring.datasource.password=3lQ4cp5uw3
