--- a/Comp354Project/Project-UI/package.json
+++ b/Comp354Project/Project-UI/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "ramda": "^0.26.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
@@ -32,6 +33,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.7",
     "@types/node": "~8.9.4",
+    "@types/ramda": "github:types/npm-ramda",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
