Fixing admin crud

--- a/Comp354Project/src/main/resources/application.properties
+++ b/Comp354Project/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://remotemysql.com:3306/I2HFBXbU7k?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=I2HFBXbU7k
+#spring.datasource.password=3lQ4cp5uw3
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/I2HFBXbU7k?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=I2HFBXbU7k
-spring.datasource.password=3lQ4cp5uw3
+spring.datasource.url=jdbc:mysql://localhost:3306/comp354
+spring.datasource.username=root
+spring.datasource.password=
