--- a/Comp354Project/pom.xml
+++ b/Comp354Project/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jodd</groupId>
+			<artifactId>jodd-mail</artifactId>
+			<version>5.0.13</version>
+		</dependency>
 	</dependencies>
 
 
