--- a/Comp354Project/Project-UI/package.json
+++ b/Comp354Project/Project-UI/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "ramda": "^0.26.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
