--- a/Comp354Project/Project-UI/package.json
+++ b/Comp354Project/Project-UI/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "angular-bootstrap-md": "^8.7.0",
+    "ngx-facebook": "^2.4.0",
     "ramda": "^0.26.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
@@ -29,7 +31,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.5",
-    "@angular/cli": "^8.3.19",
+    "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "~8.2.7",
     "@angular/language-service": "~8.2.7",
     "@types/jasmine": "~3.3.8",
