--- a/Comp354Project/Project-UI/package.json
+++ b/Comp354Project/Project-UI/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "angular-bootstrap-md": "^8.7.0",
+    "jw-angular-social-buttons": "^1.0.0",
+    "ng6-social-button": "^1.0.5",
     "ngx-facebook": "^2.4.0",
+    "ngx-social-button": "^1.0.4",
     "ramda": "^0.26.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
