--- a/Comp354Project/Project-UI/package.json
+++ b/Comp354Project/Project-UI/package.json
@@ -25,6 +25,7 @@
     "angular-bootstrap-md": "^8.7.0",
     "jw-angular-social-buttons": "^1.0.0",
     "ng6-social-button": "^1.0.5",
+    "ngx-cookie-service": "^2.2.0",
     "ngx-facebook": "^2.4.0",
     "ngx-social-button": "^1.0.4",
     "ramda": "^0.26.1",
