--- a/Comp354Project/Project-UI/package.json
+++ b/Comp354Project/Project-UI/package.json
@@ -27,6 +27,7 @@
     "ng6-social-button": "^1.0.5",
     "ngx-cookie-service": "^2.2.0",
     "ngx-facebook": "^2.4.0",
+    "ngx-paypal": "^5.0.0",
     "ngx-social-button": "^1.0.4",
     "ramda": "^0.26.1",
     "rxjs": "~6.4.0",
