--- a/Comp354Project/Project-UI/package.json
+++ b/Comp354Project/Project-UI/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.7",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-bootstrap-md": "^8.7.0",
+    "js-cookie": "^2.2.1",
     "jw-angular-social-buttons": "^1.0.0",
     "ng6-social-button": "^1.0.5",
     "ngx-cookie-service": "^2.2.0",
@@ -32,6 +33,7 @@
     "ramda": "^0.26.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
+    "sugar": "^2.0.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
